objects/ASI_CRM_FOC_Linkage__c.object
<CustomObject>
    <description>A object contains FOC request detail and related actual offtake and contract target</description>
    <fields>
        <fullName>ASI_CRM_Actual_Offtake__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Actual Offtake</label>
        <referenceTo>ASI_TH_CRM_Actual_Offtake__c</referenceTo>
        <relationshipLabel>Actual Offtake FOC Linkage</relationshipLabel>
        <relationshipName>Actual_Offtake_FOC_Linkage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Contract_Target__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Target</label>
        <referenceTo>ASI_CRM_ContractTarget__c</referenceTo>
        <relationshipLabel>Contract Target FOC Linkage</relationshipLabel>
        <relationshipName>Contract_Target_FOC_Linkage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_FOC_Request_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FOC Request Item</label>
        <referenceTo>ASI_FOC_Request_Item__c</referenceTo>
        <relationshipLabel>FOC Request Item Linkages</relationshipLabel>
        <relationshipName>FOC_Request_Item_Linkage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Match_By__c</fullName>
        <label>Match By</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SKU</fullName>
                </value>
                <value>
                    <fullName>Sub-brand</fullName>
                </value>
                <value>
                    <fullName>Wine Category</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>FOC Linkage</label>
    <nameField>
        <label>FOC Linkage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FOC Linkages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>